z-index fix

--- a/playbook-website/app/javascript/site_styles/_landing-page.scss
+++ b/playbook-website/app/javascript/site_styles/_landing-page.scss
@@ -48,7 +48,7 @@
       .hover_card {
         top: 760px;
         right: 190px;
-        z-index: 1;
+        // z-index: 1;
       }
       .gauge-max-width {
         max-width: 150px;
